v1.2 HTTP Methods Included